--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
